manifest/prod/app/svc-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-svc
  namespace: prod
  labels:
    app: app
spec:
  type: ClusterIP
  selector:
    app: app
  ports:
    - port: 80
      targetPort: 3000
      name: http
