manifest/prod/app/ing-app.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ing
  namespace: prod
  labels:
    app.kubernetes.io/name: app-ing
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-buffer-size: "128k"
    nginx.ingress.kubernetes.io/proxy-buffers-number: "8"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  rules:
    - host: app.flotio.ovh
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: app-svc
                port:
                  number: 80
  tls:
    - hosts:
        - app.flotio.ovh
      secretName: app-tls
